[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "funtask"
description = 'A Python framework for stateful functional task dispatching and execution'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
    { name = "zqqqqz2000", email = "zqqqqz2000@sina.cn" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "mypy_extensions~=0.4.3",
    "dill~=0.3.5.1",
    "betterproto~=2.0.0b5",
    "dependency-injector~=4.40.0",
    "pydantic-1.10.2",
    "fire~=0.4.0",
    "loguru~=0.6.0",
    "sqlalchemy[asyncio]~=1.4.41"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/zqqqqz2000/funtask#readme"
Issues = "https://github.com/zqqqqz2000/funtask/issues"
Source = "https://github.com/zqqqqz2000/funtask"

[tool.hatch.version]
path = "funtask/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest~=7.1.3",
    "pytest-cov",
    "pytest-timeout~=2.1.0",
    "pytest-asyncio~=0.19.0"
]
[project.optional-dependencies]
redis = [
    "redis~=4.3.4"
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=funtask --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "funtask/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
